# wop_pidfile

./: LICENSE  README.md  pyproject.toml
src/: test.py
src/wop_pidfile/: __init__.py
