[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wop_pidfile"
version = "1.0.1"
authors = [
	{name = "wopwopwopwopwop"}
]
description = "Writes the process ID of the running Python process to the PID-file. If a pidfile exists it kills the running process if wanted."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7.0"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wopwopwopwopwop/wop_pidfile"
